# cookiecutter-pypackage

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  cookiecutter.json  mkdocs.yaml  pyproject.toml  tox.toml
.github/workflows/: check.yaml
hooks/: __init__.py  post_gen_project.py  pre_gen_project.py
tests/: __init__.py  conftest.py  options.py  test_bake.py  utils.py
{{ cookiecutter.__project_slug }}/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mkdocs.yaml  pyproject.toml  tox.toml
{{ cookiecutter.__project_slug }}/.github/workflows/: check.yaml  release.yaml
{{ cookiecutter.__project_slug }}/docs/: index.md  installation.md
{{ cookiecutter.__project_slug }}/docs/api/: index.md  {{ cookiecutter.__package_name }}.__main__.md  {{ cookiecutter.__package_name }}.log.md
{{ cookiecutter.__project_slug }}/scripts/: release.py
{{ cookiecutter.__project_slug }}/src/{{ cookiecutter.__package_name }}/: __init__.py  __main__.py  log.py
{{ cookiecutter.__project_slug }}/tests/: test_{{ cookiecutter.__package_name }}.py
