[project]
name = "cookiecutter-pypackage"
version = "0.0.0"
description = "Cookiecutter template for modern Python packages"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Léo Bernard", email = "leodevian.gh@gmail.com" }
]
maintainers = [
    { name = "Léo Bernard", email = "leodevian.gh@gmail.com" }
]
keywords = [
    "cookiecutter",
    "template",
    "package",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = [
    "cookiecutter>=2.6.0",
]

[project.urls]
homepage = "https://github.com/leodevian/cookiecutter-pypackage"
repository = "https://github.com/leodevian/cookiecutter-pypackage"
changelog = "https://github.com/leodevian/cookiecutter-pypackage/blob/main/CHANGELOG.md"
documentation = "https://github.com/leodevian/cookiecutter-pypackage/tree/main/docs"
issues = "https://github.com/leodevian/cookiecutter-pypackage/issues"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "release" },
    { include-group = "type" },
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.5.47",
]
docstrings = [
    "interrogate>=1.7.0",
]
tests = [
    "pytest>=8.3.4",
    "pytest-cookies>=0.7.0",
    "uv>=0.5.26",
]
lint = [
    "pre-commit-uv>=4.1.4",
]
type = [
    "mypy>=1.13.0",
]
release = [
    "bump-my-version>=0.28.1",
    "towncrier>=24.8.0",
]

[tool.mypy]
python_version = "3.9"
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
strict = true
pretty = true

[tool.ruff]
exclude = [
    "[{][{] cookiecutter.__project_slug [}][}]/",
]

[tool.ruff.lint]
select = [
    "ALL",
]
ignore = [
    "COM812",
    "ISC001",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"hooks/post_gen_project.py" = [
    "S603",
]
"tests/**" = [
    "ARG",
    "D",
    "S101",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
    "-ra",
    "--showlocals",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]
log_level = "info"
testpaths = ["tests"]
xfail_strict = true

[tool.towncrier]
version = "Unreleased"
filename = "CHANGELOG.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = ["", "", ""]
title_format = "## {version} - {project_date}"
issue_format = "[#{issue}](https://github.com/leodevian/cookiecutter-pypackage/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[tool.codespell]
write-changes = true
ignore-words-list = ["socio-economic"]

[tool.bumpversion]
current_version = "0.0.0"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "v{new_version}"
tag_message = ""
allow_dirty = true
message = "build: bump version from {current_version} to {new_version}"
setup_hooks = [
    "towncrier build --yes",
    "git add -A :/changelog.d :/CHANGELOG.md",
]
pre_commit_hooks = [
    "uv lock -P cookiecutter-pypackage",
    "git add :/uv.lock",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
exclude = ["tests"]
fail-under = 100
verbose = 0
quiet = false
whitelist-regex = []
color = true
