[project]
name = "cookiecutter-pypackage"
version = "2025.3.10"
description = "Cookiecutter template for modern Python packages"
readme = "README.md"
keywords = [
  "cookiecutter",
  "package",
  "template",
]
license = "MIT"
license-files = [
  "LICENSE",
]
maintainers = [
  { name = "Léo Bernard", email = "leodevian.gh@gmail.com" },
]
authors = [
  { name = "Léo Bernard", email = "leodevian.gh@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development",
  "Typing :: Typed",
]
dependencies = [
  "cookiecutter>=2.6",
]
urls.changelog = "https://github.com/leodevian/cookiecutter-pypackage/blob/main/CHANGELOG.md"
urls.documentation = "https://github.com/leodevian/cookiecutter-pypackage/tree/main/docs"
urls.homepage = "https://github.com/leodevian/cookiecutter-pypackage"
urls.issues = "https://github.com/leodevian/cookiecutter-pypackage/issues"
urls.repository = "https://github.com/leodevian/cookiecutter-pypackage"

[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "release" },
  { include-group = "type" },
]
type = [
  "mypy>=1.15",
]
docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.47",
]
docstrings = [
  "interrogate>=1.7",
]
tests = [
  "pytest>=8.3.4",
  "pytest-cookies>=0.7",
  "uv>=0.6.5",
]
lint = [
  "pre-commit-uv>=4.1.4",
]
release = [
  "bump-my-version>=0.28.1",
  "towncrier>=24.8",
]

[tool.ruff]
extend-exclude = [
  "[{][{] cookiecutter.__project_slug [}][}]/pyproject.toml",
  "[{][{] cookiecutter.__project_slug [}][}]/src/[{][{] cookiecutter.__package_name [}][}]/__main__.py",
]
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # conflicts with formatter
  "ISC001", # conflicts with formatter
]
lint.per-file-ignores."[{][{] cookiecutter.__project_slug [}][}]/**" = [
  "N999", # invalid names are okay
]
lint.per-file-ignores."[{][{] cookiecutter.__project_slug [}][}]/scripts/release.py" = [
  "S603", # using subprocess is okay
]
lint.per-file-ignores."[{][{] cookiecutter.__project_slug [}][}]/tests/**" = [
  "S101", # using assert is okay in tests
]
lint.per-file-ignores."hooks/**" = [
  "PLR0133", # comparison between constants is okay in Cookiecutter hooks
  "S603",    # using subprocess is okay
]
lint.per-file-ignores."tests/**" = [
  "FBT",  # boolean-typed positional arguments are okay in tests
  "S101", # using assert is okay in tests
]
lint.pydocstyle.convention = "google"

[tool.codespell]
write-changes = true
ignore-words-list = [
  "socio-economic",
]

[tool.pyproject-fmt]
max_supported_python = "3.13"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--showlocals",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [ "error" ]
log_level = "info"
testpaths = [ "tests" ]
xfail_strict = true

[tool.bumpversion]
current_version = "2025.3.10"
parse = """(?x)
  (?P<release>
      (?:[1-9][0-9]{3})\\.
      (?:1[0-2]|[1-9])\\.
      (?:3[0-1]|[1-2][0-9]|[1-9])
  )
  (?:\\.(?P<patch>\\d+))?
"""
serialize = [
  "{release}.{patch}",
  "{release}",
]
parts.release.calver_format = "{YYYY}.{MM}.{DD}"
commit = true
commit_args = "--no-verify"
tag = true
tag_name = "v{new_version}"
tag_message = ""
allow_dirty = true
message = "build: bump version to {new_version}"
setup_hooks = [
  "towncrier build --yes",
  "git add -A :/changelog.d :/CHANGELOG.md",
]
pre_commit_hooks = [
  "uv lock -P cookiecutter-pypackage",
  "git add :/uv.lock",
]

[[tool.bumpversion.files]]
filename = "pyproject.toml"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "Unreleased"
replace = "[{new_version}](https://github.com/leodevian/cookiecutter-pypackage/tree/{new_version})"

[tool.towncrier]
version = "Unreleased"
filename = "CHANGELOG.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = [ "", "", "" ]
title_format = "## {version}"
issue_format = "[#{issue}](https://github.com/leodevian/cookiecutter-pypackage/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[tool.mypy]
python_version = "3.9"
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
pretty = true

[[tool.mypy.overrides]]
module = "hooks.*"
disable_error_code = [
  "comparison-overlap", # comparison between constants is okay in Cookiecutter hooks
]

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
exclude = [
  "{{ cookiecutter.__project_slug }}/src/{{ cookiecutter.__package_name }}/__main__.py",
]
fail-under = 100
verbose = 0
quiet = false
whitelist-regex = [  ]
color = true
