[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs>=0.4",
  "hatchling>=1.27",
]

[project]
name = "{{ cookiecutter.__project_slug }}"
description = "{{ cookiecutter.short_description }}"
readme = "README.md"
license = "{{ cookiecutter.license }}"
license-files = [
  "LICENSE",
]
maintainers = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
authors = [
  { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]
requires-python = ">={{ cookiecutter.python_version }}"
classifiers = [
  "Development Status :: 4 - Beta",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: {{ cookiecutter.python_version }}",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
dynamic = [
  "version",
]
dependencies = [  ]
{%- if cookiecutter.docs %}
urls.changelog = "{{ cookiecutter.__github_pages }}/changelog"
urls.documentation = "{{ cookiecutter.__github_pages }}"
{%- else %}
urls.changelog = "{{ cookiecutter.__github_repository }}/blob/main/CHANGELOG.md"
{%- endif %}
urls.homepage = "{{ cookiecutter.__github_repository }}"
urls.issues = "{{ cookiecutter.__github_repository }}/issues"
urls.repository = "{{ cookiecutter.__github_repository }}"
{% if cookiecutter.cli -%}
scripts.{{ cookiecutter.__project_slug }} = "{{ cookiecutter.__package_name }}.__main__:main"
{% endif %}
[dependency-groups]
dev = [
  { include-group = "lint" },
  { include-group = "release" },
  { include-group = "type" },
]
type = [
  "mypy>=1.15",
]
{%- if cookiecutter.docs %}
docs = [
  "black>=24.10",
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.47",
  "mkdocstrings[python]>=0.28.2",
]
{%- endif %}
lint = [
  "pre-commit-uv>=4.1.4",
]
docstrings = [
  "interrogate>=1.7",
]
coverage = [
  "covdefaults>=2.3",
  "coverage[toml]>=7.6.8",
]
tests = [
  "pytest>=8.3.4",
  { include-group = "coverage" },
]
pkg = [
  "check-wheel-contents>=0.6.1",
  "twine>=6.0.1",
  "uv>=0.6.5",
]
release = [
  "packaging>=24.2",
  "towncrier>=24.8",
]

[tool.hatch]
build.hooks.vcs.version-file = "src/{{ cookiecutter.__package_name }}/VERSION.txt"
version.source = "vcs"

[tool.ruff]
lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # conflicts with formatter
  "ISC001", # conflicts with formatter
]
lint.per-file-ignores."scripts/**" = [
  "INP001",
]
lint.per-file-ignores."scripts/release.py" = [
  "S603", # using subprocess is okay
  "S607", # using subprocess is okay
]
lint.per-file-ignores."tests/**" = [
  "S101", # using assert is okay in tests
]
lint.pydocstyle.convention = "google"

[tool.codespell]
write-changes = true
ignore-words-list = [ "socio-economic" ]

[tool.pyproject-fmt]
max_supported_version = "{{ cookiecutter.python_version }}"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = [
  "-ra",
  "--showlocals",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [ "error" ]
log_level = "info"
testpaths = [ "tests" ]
xfail_strict = true

[tool.coverage]
html.show_contexts = true
paths.source = [
  "src",
  ".tox/**/site-packages",
]
run.parallel = true
run.plugins = [
  "covdefaults",
]

[tool.towncrier]
name = "{{ cookiecutter.project_name }}"
filename = "CHANGELOG.md"
directory = "changelog.d"
start_string = "<!-- towncrier release notes start -->\n"
underlines = [ "", "", "" ]
title_format = "## [{version}]({{ cookiecutter.__github_repository }}/tree/{version}) - {project_date}"
issue_format = "[#{issue}]({{ cookiecutter.__github_repository }}/{issue})"

[[tool.towncrier.type]]
directory = "security"
name = "Security"
showcontent = true

[[tool.towncrier.type]]
directory = "removed"
name = "Removed"
showcontent = true

[[tool.towncrier.type]]
directory = "deprecated"
name = "Deprecated"
showcontent = true

[[tool.towncrier.type]]
directory = "added"
name = "Added"
showcontent = true

[[tool.towncrier.type]]
directory = "changed"
name = "Changed"
showcontent = true

[[tool.towncrier.type]]
directory = "fixed"
name = "Fixed"
showcontent = true

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
warn_unreachable = true
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
pretty = true

[tool.interrogate]
ignore-init-method = false
ignore-init-module = false
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = false
ignore-setters = false
exclude = [ "tests" ]
fail-under = 100
verbose = 0
quiet = false
whitelist-regex = [  ]
color = true
